--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dự án 2</title>
-  </head>
-  <body>
-    <h1>tu hoc.cc</h1>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Mini App</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+        window.onload = function() {
+            Telegram.WebApp.ready();
+        };
+    </script>
+</head>
+<body>
+    <h1>Chào mừng đến với Mini App!</h1>
+    <button onclick="Telegram.WebApp.close()">Đóng</button>
+</body>
 </html>
